# elmerfem

./: CMakeLists.txt
fem/src/: CMakeLists.txt  ElmerSolver.F90  ModelDescription.F90  OptimizationUtils.F90  SolverUtils.F90
fem/src/modules/: FindOptimum.F90
fem/tests/LubricationTunedForce/: case.sif
fem/tests/MinpackControlFourHeaters/: CMakeLists.txt
fem/tests/OptimizeBobyqaFourHeaters/: CMakeLists.txt
fem/tests/OptimizeNewuoaFourHeaters/: CMakeLists.txt
fem/tests/OptimizeSimplexFourHeatersInt/: case.sif
